[tool.poetry]
name = "pycoder"
version = "0.1.0"
description = ""
authors = ["ikura1 <ikura.lab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyppeteer = "^0.0.25"
fire = "^0.2.1"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.poetry.scripts]
pycoder = "pycoder.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
